<resources>
    <string name="app_name">Фон для калькулятора</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="num_dots">.</string>
    <string name="clean">C</string>
    <string name="change">+\-</string>
    <string name="per">%</string>
    <string name="div">:</string>
    <string name="mult">*</string>
    <string name="sub">-</string>
    <string name="sum">+</string>
    <string name="equally">=</string>
    <string name="set">Настройки</string>
    <string name="ok">OK</string>
    <string name="nameImg">Введите название картинки</string>
</resources>
