<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image123"
        android:scaleType="centerCrop"/>
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:hint="@string/num0"
        android:gravity="end|bottom"
        android:textSize="40sp"/>
    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_below="@id/result">

        <Button
            android:id="@+id/clean"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/clean"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/per"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/num"
        android:layout_below="@id/topPanel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mult"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sum"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/equally"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/num"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/topPanel"
        >

        <LinearLayout
            android:id="@+id/num789"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/num7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num7"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/num8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num8"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/num9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num9"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/num456"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/num4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num4"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/num5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num5"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/num6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num6"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/num123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/num1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num1"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/num2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num2"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/num3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num3"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:id="@+id/num0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num0"
                android:layout_weight="9"/>

            <Button
                android:id="@+id/numDots"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/num_dots"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</FrameLayout>